# whisper-it-all

./: PRODUCT.md  README.md  bun.lockb  package.json
backend/core/: bun.lockb  package.json
backend/core/src/: config.ts  index.ts  registry.ts  service.ts  types.ts
src/: WindowManager.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: api.rs  audio.rs  lib.rs  main.rs  screenshot.rs  state.rs
src/components/: ErrorBoundary.tsx  RecordingIndicator.tsx  TranscribingIndicator.tsx  chat.tsx
src/views/AiInteraction/: AiInteractionWindow.tsx  assistant.tsx
src/views/AiInteraction/assistant-ui/: thread.tsx
src/views/AiInteraction/components/: ChatInterface.tsx  CustomChatMessageList.tsx  ModelSelectorSheet.tsx
src/views/AiInteraction/context/: ModelSelectionContext.tsx
src/views/AiInteraction/hooks/: useAiInteraction.tsx
src/views/AiInteraction/utils/: constants.ts  screenshotUtils.ts  types.ts
src/views/Recorder/: RecorderWindow.tsx
