[package]
name = "vaiced"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vaiced_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-positioner = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
base64 = "0.21"
rodio = "0.17"
bytes = "1.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
mime = "0.3"
lazy_static = "1.4"
dotenvy = "0.15"
crossbeam-channel = "0.5"
tauri-plugin-http = { version = "2", features = ["multipart", "json"] }
xcap = "0.4.1" # Replaced screenshots with xcap
image = { version = "0.25", features = ["png"] }
thiserror = "1.0"


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
